Mon Jan 12 11:46:51 1998  Michael Snyder  (msnyder@cleaver.cygnus.com)

	* symtab.c: move rbreak_command from no_class to class_breakpoint
	  so it will be listed under "help breakpoints".

Sat Jan 10 14:58:04 1998  Stan Shebs  <shebs@andros.cygnus.com>

	* rdi-share/hostchan.c: Remove gettimeofday declaration.

Thu Jan  8 11:03:59 1998  Nick Clifton  <nickc@cygnus.com>

	* remote-rdp.c: Applied patches submitted by Tony.Thompson@arm.com
 	to implement the Angel remote debugging interface.

	* Makefile.in: Add build rules for remote-rdi.c and
	rdi-share/libangsd.a.
	
	* configure.tgt: Updated from source on branch.
	* config/arm/tm-arm.h: Updated from source on branch.
	* arm-tdep.c: Updated from source on branch.

	* rdi-share: New directory, RDI library contributed by ARM.

Mon Jan  5 20:21:59 1998  Mark Alexander  <marka@cygnus.com>

	* monitor.h (MO_PRINT_PROGRAM_OUTPUT): Define.
	* monitor.c (monitor_wait): Echo program output.
	* dve3900-rom.c (_initialize_r3900_rom): Remove MO_HANDLE_NL flag,
	add MO_PRINT_PROGRAM_OUTPUT flag.

Fri Jan  2 18:48:58 1998  Mark Alexander  <marka@cygnus.com>

	* configure.in: Double up brackets in shell case pattern.

Fri Jan  2 17:06:05 1998  Michael Snyder  (msnyder@cleaver.cygnus.com)

        * tracepoint.c (finish_tfind_command): improved algorithm for
        deciding when we've "stepped" into a new stack frame.
        (map_args_over_tracepoints): loop over tracepoint list "safely", 
	since list elements may be deleted during loop.
	(read_actions): add actions to history list.

For older changes see ChangeLog-97

Local Variables:
mode: indented-text
left-margin: 8
fill-column: 74
version-control: never
End: